crates/check_cli/tests/snapshots/main_commands_lint/fix_suggested_error.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `fix.js`

```js
let a = 4;
debugger;
console.log(a);

```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Incompatible arguments --write and --fix. These arguments do the same thing, but --fix is deprecated. Prefer to use --write.
  


```
