crates/check_cli/tests/snapshots/main_commands_lint/fix_unsafe_with_error.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `test1.js`

```js
const a = 4;
console.log(a);
function _f() { arguments; }

```

## `test2.js`

```js
const a = 4;
console.log(a);
function _f() { arguments; }

```

# Emitted Messages

```block
test1.js:3:17 lint/complexity/noArguments ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Use the rest parameters instead of arguments.
  
    1 │ const a = 4;
    2 │ console.log(a);
  > 3 │ function _f() { arguments; }
      │                 ^^^^^^^^^
    4 │ 
  
  i arguments does not have Array.prototype methods and can be inconvenient to use.
  

```

```block
test2.js:3:17 lint/complexity/noArguments ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Use the rest parameters instead of arguments.
  
    1 │ const a = 4;
    2 │ console.log(a);
  > 3 │ function _f() { arguments; }
      │                 ^^^^^^^^^
    4 │ 
  
  i arguments does not have Array.prototype methods and can be inconvenient to use.
  

```

```block
Checked 2 files in <TIME>. Fixed 2 files.
Found 2 warnings.
```
