crates/check_cli/tests/snapshots/main_commands_lint/fs_error_read_only.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your check.json or check.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - test.js
  


```

# Emitted Messages

```block
test.js internalError/io  INTERNAL  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × cannot acquire write access to file in read-only filesystem
  
  ! This diagnostic was derived from an internal Check error. Potential bug, please report it if necessary.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
```
