crates/check_cli/tests/snapshots/main_commands_lint/ignore_configured_globals.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "javascript": {
    "globals": ["foo", "bar"]
  },
  "linter": {
    "rules": {
      "correctness": {
        "noUndeclaredVariables": "error"
      }
    }
  }
}
```

## `fix.js`

```js
foo.call(); bar.call();
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
